# pde-alchemy

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  QUICKSTART.md  README.md  SPEC.md  VALIDATION_PHILOSOPHY.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: black_scholes_first_workflow.md  market_data_sources.md  opensourcerisk_learnings_and_integrations.md  output_specification.md  validation_strategy.md
docs/blog/: 01-foundation-and-vanilla.md  02-config-math-render.md  03-pricing-validation-exotics.md  04-examples-and-docs.md  05-marimo-notebook-explorer.md  06-workflow-recipes.md  07-market-curves-and-quality-gates.md  08-notebook-convergence-and-ux.md  README.md
examples/: exotic_discrete_asian_barrier_dividend.toml  vanilla_european_call.toml  vanilla_market_curve_surface.toml
examples/notebooks/: black_scholes_results.py  price_explorer.py  spec_black_scholes.py  spec_black_scholes_with_results.py
src/pdealchemy/: __about__.py  __init__.py  exceptions.py  logging_config.py  notebook_reporting.py  notebook_spec.py  notebook_support.py  notebook_utils.py  spec_bridge.py  toml_rendering.py
templates/: spec_template.py  spec_template_examples.md
tests/: conftest.py  test_cli.py  test_exceptions.py  test_logging_config.py  test_notebook_support.py
tests/cli/: test_notebook_to_toml.py  test_spec_to_runtime_toml.py
tests/config/: test_loader.py  test_models.py  test_schema.py
tests/core/: test_dispatcher.py
tests/examples/: test_examples.py  test_notebook_export.py
tests/math_bridge/: test_parser.py
tests/notebook/: test_notebook_reporting.py  test_notebook_spec.py  test_notebook_utils.py  test_spec_bridge.py
tests/render/: test_explain.py
tests/validation/: test_equations.py  test_runner.py
(+31 files in other folders)
