[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "pdealchemy"
version = "0.1.0"
description = "Turn mathematical option definitions into accurate prices using PDE solvers."
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
  { name = "PDEAlchemy Contributors" }
]
license = { text = "MIT" }
dependencies = [
  "loguru>=0.7.3",
  "numba>=0.61.2",
  "numpy>=2.2.4",
  "py-pde>=0.44.0",
  "pydantic>=2.11.3",
  "pydantic-settings>=2.9.1",
  "quantlib>=1.38",
  "rich>=14.0.0",
  "scipy>=1.15.2",
  "sympy>=1.13.3",
  "typer>=0.15.2",
]

[project.optional-dependencies]
interactive = [
  "marimo>=0.23.1",
  "matplotlib>=3.10.1",
  "plotly>=6.0.1",
]
dev = [
  "hypothesis>=6.131.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.5",
  "ty>=0.0.27",
]

[project.scripts]
pdealchemy = "pdealchemy.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdealchemy"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
source = ["pdealchemy"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 89

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
  "ANN",
  "B",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "N",
  "SIM",
  "UP",
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/pdealchemy/cli/app.py" = ["B008"]
"tests/**/*.py" = ["ANN", "D"]
"examples/notebooks/*.py" = ["ANN", "D"]
"templates/*.py" = ["ANN", "D"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.12"
